--- a/bug_tracking/bug_detail/templates/bug_detail/index.html
+++ b/bug_tracking/bug_detail/templates/bug_detail/index.html
@@ -60,13 +60,13 @@
             Estado:
           </span>
           <span class="text-1">
-            {%if bug.estado == "('ASIGNADO', 'bug recien asignado')"%}
+            {%if bug.estado == "Asignado"%}
                 <td><span class="status process">Asignado</span></td>
               {%endif%}
-              {%if bug.estado == "('SOLUCIONADO', 'bug solucionado')"%}
+              {%if bug.estado == "SOLUCIONADO"%}
                 <td><span class="status completed">Solucionado</span></td>
               {%endif%}
-              {%if bug.estado == "('EN PROCESO', 'bug esta proceso de revisión')"%}
+              {%if bug.estado == "EN PROCESO"%}
                 <td><span class="status pending">En proceso</span></td>
               {%endif%}
           </span>
@@ -77,16 +77,16 @@
             Prioridad:
           </span>
           <span class="text-1">
-            {%if bug.prioridad == "('BAJA', 'bug de baja prioridad')"%}
+            {%if bug.prioridad == "BAJA"%}
                 <td><span class="status process">Baja</span></td>
               {%endif%}
-              {%if bug.prioridad == "('MEDIA', 'bug de media prioridad')"%}
+              {%if bug.prioridad == "MEDIA"%}
                 <td><span class="status completed">Media</span></td>
               {%endif%}
-              {%if bug.prioridad == "('ALTA', 'bug de alta prioridad')"%}
+              {%if bug.prioridad == "ALTA"%}
                 <td><span class="status pending">Alta</span></td>
               {%endif%}
-              {%if bug.prioridad == "('URGENTE', 'bug de urgente prioridad')"%}
+              {%if bug.prioridad == "URGENTE"%}
                 <td><span class="status pending">Urgente</span></td>
               {%endif%}
           </span>
