--- a/bug_tracking/home/static/css/start.css
+++ b/bug_tracking/home/static/css/start.css
@@ -245,5 +245,18 @@
 }
 
 .graph{
-    
+    margin-top: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.graph h2{
+    margin-bottom: 1%;
+}
+.graph .plot-container.plotly{
+    background-color: var(--primary-color);
+    border-radius: 10px;
+
 }
