Correción de ortografía

--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -131,7 +131,7 @@
       <i class='bx bxs-watch' ></i>
       <span class="text">
         <h3>{{cant_reportes_pendientes}}</h3>
-        <p>errores en estado pendiente</p>
+        <p>tickets en estado pendiente</p>
       </span>
     </li>
   </ul>
