--- a/bug_tracking/buglist/templates/buglist/buglist.html
+++ b/bug_tracking/buglist/templates/buglist/buglist.html
@@ -15,6 +15,12 @@
 
         <div class="head">
           <h3>Errores</h3>
+
+          <div class="search">
+            <i class='bx bx-search'></i>
+            <input type="text" id="search-input-bug" name="bug_search" placeholder="Buscar" onkeyup="loadBugSearch(event)">
+          </div>
+          
         </div>
 
         <table id="bug-table">
@@ -49,8 +55,6 @@
                 {% else %}
                 <a href="#" onclick="loadBugFilter(event, 'fecha')"><i class='bx bx-sort-down'></i></a>
                 {% endif %}
-
-                <a href="#"></a>
               </th>
               <th>
                 Estado
@@ -144,6 +148,11 @@
 
         <div class="head">
           <h3>Reportes</h3>
+
+          <div class="search">
+            <i class='bx bx-search'></i>
+            <input type="text" id="search-input-report" name="report_search" placeholder="Buscar" onkeyup="loadReportSearch(event)">
+          </div>
         </div>
 
         <table id="report-table">
@@ -222,13 +231,13 @@
               {% endif %}
               <span class="page-numbers">
                 {% for num in report_page_obj.adjusted_elided_pages %}
-                {% if num == report_page_obj.number %}
-                <span class="current-page">{{ num }}</span>
-                {% elif num == report_page_obj.paginator.ELLIPSIS %}
-                <span class="ellipsis">...</span>
-                {% else %}
-                <a href="#" onclick="loadReportPage({{ num }}, event}}</a>
-                {% endif %}
+                  {% if num == report_page_obj.number %}
+                    <span class="current-page">{{ num }}</span>
+                  {% elif num == report_page_obj.paginator.ELLIPSIS %}
+                    <span class="ellipsis">...</span>
+                  {% else %}
+                    <a href="#" onclick="loadReportPage({{ num }}, event)">{{ num }}</a>
+                  {% endif %}
                 {% endfor %}
               </span>
               {% if report_page_obj.has_next %}
@@ -242,81 +251,120 @@
     </div>
   </div>
 
-  <div class="modal-fecha">
-
-  </div>
-
-
   <script>
     var currentBugOrder = getCurrentBugOrder(window.location.href); // Orden inicial
     var currentReportOrder = getCurrentReportOrder(window.location.href); // Orden inicial
-  
+
     function loadBugFilter(event, filter) {
       event.preventDefault();
-  
+
       var newOrder = getNextOrder(currentBugOrder);
-  
+
       var bugListUrl = updateURLParameter(window.location.href, 'bug_page', '1');
       bugListUrl = updateURLParameter(bugListUrl, 'bug_order', filter);
       bugListUrl = updateURLParameter(bugListUrl, 'bug_order_direction', newOrder);
-  
+
       history.pushState(null, null, bugListUrl);
-  
+
       $('#bug-table').load(bugListUrl + ' #bug-table', function() {
         // Actualizar la paginación también si es necesario
         $('.bug-pagination').load(bugListUrl + ' .bug-pagination');
       });
-  
+
       currentBugOrder = newOrder; // Actualizar el orden actual
     }
-  
+
     function loadBugPage(pageNumber, event) {
       event.preventDefault();
-  
+
       var bugListUrl = updateURLParameter(window.location.href, 'bug_page', pageNumber);
       bugListUrl = updateURLParameter(bugListUrl, 'bug_order_direction', currentBugOrder);
-  
+
       history.pushState(null, null, bugListUrl);
-  
+
       $('#bug-table').load(bugListUrl + ' #bug-table', function() {
         // Actualizar la paginación también si es necesario
         $('.bug-pagination').load(bugListUrl + ' .bug-pagination');
       });
     }
-  
+
+    function loadBugSearch(event) {
+      event.preventDefault();
+
+      var searchValue = $('#search-input-bug').val().trim();
+
+      var bugListUrl = window.location.href;
+      bugListUrl = updateURLParameter(bugListUrl, 'bug_page', '1');
+
+      if (searchValue !== '') {
+        bugListUrl = updateURLParameter(bugListUrl, 'bug_search', searchValue);
+      } else {
+        bugListUrl = removeURLParameter(bugListUrl, 'bug_search');
+      }
+
+      history.pushState(null, null, bugListUrl);
+
+      $('#bug-table').load(bugListUrl + ' #bug-table', function() {
+        // Actualizar la paginación también si es necesario
+        $('.bug-pagination').load(bugListUrl + ' .bug-pagination');
+      });
+    }
+
     function loadReportFilter(event, filter) {
       event.preventDefault();
-  
+
       var newOrder = getNextOrder(currentReportOrder);
-  
+
       var reportListUrl = updateURLParameter(window.location.href, 'report_page', '1');
       reportListUrl = updateURLParameter(reportListUrl, 'report_order', filter);
       reportListUrl = updateURLParameter(reportListUrl, 'report_order_direction', newOrder);
-  
+
       history.pushState(null, null, reportListUrl);
-  
+
       $('#report-table').load(reportListUrl + ' #report-table', function() {
         // Actualizar la paginación también si es necesario
         $('.report-pagination').load(reportListUrl + ' .report-pagination');
       });
-  
+
       currentReportOrder = newOrder; // Actualizar el orden actual
     }
-  
+
     function loadReportPage(pageNumber, event) {
       event.preventDefault();
-  
+
       var reportListUrl = updateURLParameter(window.location.href, 'report_page', pageNumber);
       reportListUrl = updateURLParameter(reportListUrl, 'report_order_direction', currentReportOrder);
-  
+
       history.pushState(null, null, reportListUrl);
-  
+
       $('#report-table').load(reportListUrl + ' #report-table', function() {
         // Actualizar la paginación también si es necesario
         $('.report-pagination').load(reportListUrl + ' .report-pagination');
       });
     }
-  
+
+    function loadReportSearch(event) {
+      event.preventDefault();
+
+      var searchValue = $('#search-input-report').val().trim();
+
+      var reportListUrl = window.location.href;
+      reportListUrl = updateURLParameter(reportListUrl, 'report_page', '1');
+
+      if (searchValue !== '') {
+        reportListUrl = updateURLParameter(reportListUrl, 'report_search', searchValue);
+      } else {
+        reportListUrl = removeURLParameter(reportListUrl, 'report_search');
+      }
+
+      history.pushState(null, null, reportListUrl);
+
+      $('#report-table').load(reportListUrl + ' #report-table', function() {
+        // Actualizar la paginación también si es necesario
+        $('.report-pagination').load(reportListUrl + ' .report-pagination');
+      });
+    }
+
     function updateURLParameter(url, param, paramValue) {
       var pattern = new RegExp('(' + param + '=).*?(&|$)');
       if (url.search(pattern) >= 0) {
@@ -324,7 +372,7 @@
       }
       return url + (url.indexOf('?') > 0 ? '&' : '?') + param + '=' + paramValue;
     }
-  
+
     function getCurrentBugOrder(url) {
       var regex = /[?&]bug_order_direction=([^&#]*)/;
       var match = regex.exec(url);
@@ -333,7 +381,7 @@
       }
       return 'asc'; // Devuelve 'asc' si el parámetro no está presente en la URL
     }
-  
+
     function getCurrentReportOrder(url) {
       var regex = /[?&]report_order_direction=([^&#]*)/;
       var match = regex.exec(url);
@@ -342,7 +390,7 @@
       }
       return 'asc'; // Devuelve 'asc' si el parámetro no está presente en la URL
     }
-  
+
     function getNextOrder(currentOrder) {
       if (currentOrder === 'asc') {
         return 'desc';
@@ -352,25 +400,24 @@
         return 'asc'; // Cambiar a ascendente si no está establecido actualmente
       }
     }
-  
+
     function removeURLParameter(url, parameter) {
       var urlParts = url.split('?');
       if (urlParts.length >= 2) {
         var prefix = encodeURIComponent(parameter) + '=';
         var params = urlParts[1].split(/[&;]/g);
-  
+
         for (var i = params.length; i-- > 0;) {
           if (params[i].lastIndexOf(prefix, 0) !== -1) {
             params.splice(i, 1);
           }
         }
-  
         url = urlParts[0] + (params.length > 0 ? '?' + params.join('&') : '');
       }
-  
       return url;
     }
   </script>
+
   
   
   
